...
            android:id="@+id/go_setting_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="跳到设置界面"/>

        <Button
            android:id="@+id/camera_capture_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="拍照"/>

        <Button
            android:id="@+id/pick_pic_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="选择图片"/>
...
