<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <EditText
                android:id="@+id/et_toast_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="toast的内容"
                android:text="toast一下"/>


        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/short_toast_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="短toast"/>

        <Button
            android:id="@+id/long_toast_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="长toast"/>

        <Button
            android:id="@+id/cacle_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="取消"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>