...
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                >

                <Switch
                    android:id="@+id/open_wifi_sw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="打开/关闭 wifi"
                    />
            </LinearLayout>

            <include layout="@layout/separator_line"/>

            <LinearLayout
...
