...
                    android:maxLines="1"
                    android:maxLength="4"
                    android:text="100"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/vibrate_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="震动"/>

        </LinearLayout>

        <include layout="@layout/separator_line"/>

        <LinearLayout
...
